--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
-
+server.servlet.session.timeout=90s
+vaadin.closeIdleSessions=true
+vaadin.heartbeatInterval=30
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # To improve the performance during development.
