--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,20 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
-server.servlet.session.timeout=90s
+
+# this does not affect Tomcat if the app is deployed as a war, see src/main/WEB-INF/web.xml
+# server.servlet.session.timeout=90s
+
+# this will allow sessions to expire if there is no user interaction within the session expiration time
 vaadin.closeIdleSessions=true
-vaadin.heartbeatInterval=30
+
+# how often (in seconds) Vaadin should ping back server from the browser with HEARTBEAT requests
+vaadin.heartbeatInterval=60
+
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+#vaadin.launch-browser=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
+vaadin.allowed-packages = com.vaadin,org.vaadin,dev.hilla,com.example.application
 spring.jpa.defer-datasource-initialization = true
 spring.sql.init.mode = always
